# kata_cxx

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/includes/kata/: StringUtils.hpp
src/src/: Source.cpp  StringUtils.cpp
tests/: CMakeLists.txt  StringUtilsTests.cpp
